# macos-UnifiedLogs

./: Cargo.toml
benches/: big_sur_benchmark.rs  high_sierra_benchmark.rs  monterey_benchmark.rs
examples/parse_tracev3/src/: main.rs
examples/unifiedlog_parser/src/: main.rs
examples/unifiedlog_parser_json/src/: main.rs
src/: catalog.rs  chunkset.rs  dsc.rs  error.rs  header.rs  iterator.rs  lib.rs  message.rs  parser.rs  preamble.rs  timesync.rs  unified_log.rs  util.rs  uuidtext.rs
src/chunks/: oversize.rs  simpledump.rs  statedump.rs
src/chunks/firehose/: activity.rs  firehose_log.rs  flags.rs  loss.rs  message.rs  nonactivity.rs  signpost.rs  trace.rs
src/decoders/: bool.rs  darwin.rs  decoder.rs  dns.rs  location.rs  mod.rs  network.rs  opendirectory.rs  time.rs  uuid.rs
