[package]
name = "macos-unifiedlogs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = "0.4.38"
lazy_static = "1.5.0"
log = "0.4.21"
lz4_flex = "0.11.3"
nom = "7.1.3"
plist = "1.6.1"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[dev-dependencies]
simplelog = "0.12.2"
csv = "1.3.0"
chrono = "0.4.38"
criterion = "0.5.1"

[[bench]]
name = "high_sierra_benchmark"
harness = false

[[bench]]
name = "big_sur_benchmark"
harness = false

[[bench]]
name = "monterey_benchmark"
harness = false

[[bench]]
name = "my_benchmark"
harness = false
